--- a/src/components/Empty/styles.css
+++ b/src/components/Empty/styles.css
@@ -1,16 +1,16 @@
 .container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   height: 200px;
   width: 100%;
   border-top: 1px solid var(--gray-400);
   border-radius: 8px;
-  align-items: center;
-  justify-content: center;
 }
 
 .clipboard {
   color: var(--gray-400);
+  margin-top: 64px;
   margin-bottom: 16px;
 }
 
