--- a/src/components/Task/styles.css
+++ b/src/components/Task/styles.css
@@ -15,14 +15,37 @@
   vertical-align: middle;
   border: 3px solid var(--blue-300);
   appearance: none;
-  -webkit-appearance: none;
+  color: aliceblue;
   outline: none;
   cursor: pointer;
+}
+
+.taskContainer input[type="checkbox"]:hover {
+  border: 3px solid var(--blue-500);
+  background-color: #1e709f43;
 }
 
 .taskContainer input[type="checkbox"]:checked {
   border: 3px solid var(--purple-500);
   background-color: var(--purple-500);
+}
+
+.taskContainer input[type="checkbox"]:checked:hover {
+  border: 3px solid var(--purple-300);
+  background-color: var(--purple-300);
+}
+
+.taskContainer input[type="checkbox"]:checked::before {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  content: "\2713";
+  margin-top: -2px;
+}
+
+.taskContainer .paragraph-checked {
+  text-decoration: line-through;
+  color: var(--gray-300);
 }
 
 .taskContainer button {
@@ -34,6 +57,10 @@
   line-height: 0;
   border-radius: 2px;
   transition: 0.2s;
+}
+
+.taskContainer button:hover {
+  color: var(--red-500);
 }
 
 .taskContainer .messageContainer {
